[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "socketssl"
license = {file = "LICENSE"}
requires-python = ">= 3.12"
description = "Sockets Streamlined: A wrapper around the python socket library for easy setup and use."
readme = "README.md"
authors = [
  {name = "Moritz Strobel", email = "moritz.strobel@outlook.de"},
]
keywords = ["sockets", "client", "server", "wrapper", "easy", "streamlined"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
    "Topic :: Communications",
]
dependencies = [
  "pydantic"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "socketssl.__version__"}
